Update to JDK 17 & Springboot 3
Change-Id: I6bb4a20da81f16ede57ba576021e8f14b327927c
Signed-off-by: JohnKeeney <john.keeney@est.tech>
Issue-ID: NONRTRIC-841